compiler/testData/javaModules/sourcelessSmartcastSourcefullOriginalExpression/main.fir.txt
compiler/testData/javaModules/sourcelessSmartcastSourcefullOriginalExpression/main/Main.kt:7:13: error: symbol is declared in module 'java.desktop' which does not export package 'sun.swing'.
    this is sun.swing.ImageIconUIResource -> description
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
COMPILATION_ERROR
